<resources>
    <string name="app_name">Waste Smart</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="back_button_desc">Back</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</string>
    <string name="cameraX_title">Camera</string>
    <string name="cameraX_capture_image_desc">Capture Image</string>
    <string name="cameraX_enable_flash_desc">Enable Flash</string>
    <string name="cameraX_switch_camera_desc">Switch Camera</string>
    <string name="title_display">Tampilan</string>
    <string name="title_display_use_device">Mengikuti Perangkat</string>
    <string name="title_display_use_light">Mode Terang</string>
    <string name="title_display_use_dark">Mode Gelap</string>
    <string name="save_buton_desc">Simpan</string>
    <string name="user_profile_image_desc">User Profile Image</string>
    <string name="change_buton_desc">Ubah</string>
    <string name="use_profile_name_desc">Nama</string>
    <string name="user_change_user_profile_button_desc">Ubah Profil</string>
    <string name="encyclopedia_title">Ensiklopedia</string>
    <string name="waste_image_desc">Waste Image</string>
    <string name="encyclopedia_category">Kategori Sampah</string>
    <string name="encyclopedia_waste_example_title">Contoh Sampah</string>
    <string name="encyclopedia_waste_type_title">Jenis Sampah</string>
    <string name="encyclopedia_waste_how_to_manage_title">Cara Mengelola</string>
    <string name="user_greeting_text">"Halo, "</string>
    <string name="user_have_a_nice_day">Semoga Harimu Menyenangkan!</string>
    <string name="camera_button_desc">Camera</string>
    <string name="line_div_desc">Line Divider</string>
    <string name="gallery_button_desc">Gallery</string>
    <string name="scan_waste_start_text">Mulai Pindai Sampah</string>
    <string name="quiz_button_desc">Kuis</string>
    <string name="fun_fact_title">Fun Fact</string>
    <string name="waste_smart_icon">Waste Smart Icon</string>
    <string name="profile_title_text">Profil</string>
    <string name="user_title_text">Pengguna</string>
    <string name="next_button_text">Selanjutnya</string>
    <string name="quiz_finish_ilustration">Congratulation User</string>
    <string name="quiz_congrats_user">Selamat,</string>
    <string name="quiz_user_got_value_text">Kamu Mendapatkan Nilai</string>
    <string name="quiz_user_and_total_question_text">5 / 5</string>
    <string name="quiz_see_result">Lihat Hasil</string>
    <string name="back_to_home">Kembali Ke Beranda</string>
    <string name="quiz_start_ilustration">Start Quiz Ilustration</string>
    <string name="quiz_make_sure_user">Apakah kamu siap?</string>
    <string name="quiz_lets_go_text">Ayo!</string>
    <string name="quiz_total_question_text">Kuis berjumlah 5 soal</string>
    <string name="scan_result_confident">Confident Score</string>
    <string name="scan_result_text">Hasil</string>
    <string name="scan_image_desc">Waste Scan Image</string>
    <string name="quiz_waste_category">Kategori Sampah</string>
    <string name="quiz_top1_text">#1 Top</string>
    <string name="quiz_top2_text">#2 Top</string>
    <string name="quiz_top3_text">#3 Top</string>
    <string name="quiz_tips">Tips</string>
    <string name="profile_set_profile_title">Mohon Lengkapi Profil</string>
    <string name="button_done_text">Selesai</string>
    <string name="image_feature_onboarding">Image Feature</string>
    <string name="onboarding_desc_text">Kenali kategori sampah lewat foto secara langsung dan akurat.</string>
    <string name="onboarding_title_text">Scan Sampah</string>
    <string name="button_start_desc">Mari Kita Mulai!</string>
    <string name="waste_title_text">Title</string>
</resources>